# asri

./: .env.example  .gitignore  CHECKLIST.md  CITATION.cff  DATA_PROVENANCE.md  Dockerfile  FUTURE_IMPROVEMENTS.md  LICENSE  PROGRESS.md  PROJECT_SUMMARY.txt  QUICK_START.md  README.md  REPRODUCIBILITY.md  REVISION_NOTES.md  RUNBOOK_DASHBOARD.md  SESSION_NOTES.md  SETUP_GUIDE.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml
alembic/: env.py
alembic/versions/: 2025_12_13_0034-848b60680134_initial_schema.py
arxiv-submission/: ARXIV_METADATA.md  ASRI_Paper.tex  references.bib
arxiv-submission/tables/: aggregation_nonlinear.tex  detection_matrix.tex  hmm_diagnostics.tex  threshold_sensitivity.tex  window_sensitivity.tex
data/: peg_history.csv
data/snapshots/: README.md  bridges_2026-07-11.json
deploy/: docker-compose.yml  nginx.conf
docs/: ASRI-PROPOSAL.md  ASRI_APIs_Collection.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: asri_open_full_20260711.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ASRIDashboard.tsx
frontend/src/components/dashboard/: BenchmarkHeadline.tsx  EventReplayPanel.tsx  KPIStrip.tsx  (+5 more)
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  postgres.yaml  secret.yaml.template
paper/: ASRI_Paper.aux  ASRI_Paper.bbl  ASRI_Paper.blg  ASRI_Paper.out  ASRI_Paper.tex  ASRI_Paper.toc  CITATION.cff  Makefile  cover_letter.tex  references.bib  supplementary.tex
results/: baseline_comparison.json  baseline_extension.json  event_study_hac.json  granger_discrete_outcome.json  lag_comparison_results.json  moving_block_bootstrap_roc.json  paired_bootstrap_baselines.json  placebo_chow_cusum_repro.json  regenerated_tables_jun2026.json  svb_investigation.json  validation_summary.json
results/data/: README.md  asri_backfill_2026H1.parquet  asri_history.parquet  asri_open_full_20260711.parquet  dy_rolling_connectedness.csv  dy_rolling_connectedness_daily.csv
results/reconciliation/: event_study_method_comparison.json  event_study_primary.json  methodology_adjudication.md
results/tables/: ablation.tex  aggregation_comparison.tex  aggregation_nonlinear.tex  collinearity_diagnostics.tex  confusion_summary.tex  correlation_matrix.tex  descriptive.tex  detection_reconciliation.tex  duration_interpretation.tex  duration_sensitivity.tex  event_study.tex  event_study_comparison.tex  granger_causality.tex  hmm_diagnostics.tex  hmm_selection.tex  holdout_cv.tex  lag_comparison.tex  out_of_sample.tex  pca_loadings.tex  regimes.tex  regimes_updated.tex  robustness.tex  roc_metrics.tex  stationarity.tex  transition_matrix.tex  uncertainty_bands.tex  walk_forward_fixed.tex  walk_forward_optimized.tex  walk_forward_proper.tex  weight_sensitivity.tex  weights.tex
scripts/: asri-refresh.service  asri-refresh.timer  asri-scheduler.service  backfill.py  backfill_d1.py  backfill_d1_standalone.py  baseline_comparison.py  baseline_extension.py  build_dy_daily.py  build_peg_history.py  check_api_contract_live.py  check_d1_consistency.py  check_full_crisis_period.py  check_terra_luna.py  collinearity_analysis.py  compare_aggregation.py  compute_roc_metrics.py  compute_uncertainty.py  deploy.sh  dump_universe_snapshot.py  duration_sensitivity.py  event_study_hac.py  extend_peg_history.py  extract_hmm_diagnostics.py  generate_asri_series.py  generate_detection_table.py  generate_roc_figure.py  granger_discrete_outcome.py  install-service.sh  investigate_ablation.py  load_d1_backfill.py  moving_block_bootstrap_roc.py  paired_bootstrap_baselines.py  peg_loader.py  placebo_chow_cusum_repro.py  real_dy_hmm_analysis.py  reconcile_d1_equation.py  refresh_asri.py  regenerate_arxiv_figures.py  run_event_study.py  (+4 more)
src/asri/: __init__.py  config.py
src/asri/aggregation/: __init__.py  ciss_aggregation.py  comparison.py  copula_aggregation.py  nonlinear.py  regime_aggregation.py  validation.py
src/asri/api/: __init__.py  main.py
src/asri/backtest/: __init__.py  backtest.py  historical.py  publication_lag.py
src/asri/db/: init_db.py
src/asri/ingestion/: __init__.py  base.py  coingecko.py  defillama.py  fred.py  news.py
src/asri/models/: __init__.py  asri.py  base.py  raw_data.py
src/asri/pipeline/: __init__.py  calculate.py  orchestrator.py  transform.py
src/asri/publication/: figures.py
src/asri/regime/: __init__.py  hmm.py
src/asri/scheduler/: __init__.py  daemon.py  jobs.py  static_generator.py
src/asri/scripts/: run_robustness.py  run_validation.py
src/asri/signals/: __init__.py  algorithmic_stablecoin.py  calculator.py
src/asri/statistics/: __init__.py  causality.py  cointegration.py  confidence.py  confidence_sequences.py  descriptive.py  stationarity.py  tail_risk.py
src/asri/validation/: __init__.py  ablation.py  benchmark.py  event_study.py  proxy_validation.py  robustness.py  roc_analysis.py  sensitivity.py  walk_forward.py
src/asri/weights/: __init__.py  comparison.py  critic.py  elastic_net.py  entropy.py  pca.py
tests/: __init__.py  test_calculator.py  test_integrity_guardrails.py  test_statistics.py  test_validation.py  test_weights.py
workers/: deploy.sh  schema.sql  wrangler.toml
workers/src/: main.py
(+5 files in other folders)
