[project]
name = "asri"
version = "2.0.0"
description = "Aggregated Systemic Risk Index - Unified crypto/DeFi systemic risk monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Murad Farzulla", email = "murad@farzulla.org"},
    {name = "Andrew Maksakov", email = "andrew@resurrexi.io"},
]
keywords = ["crypto", "defi", "risk", "systemic-risk", "finance", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "polars>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
scraping = [
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
]
statistics = [
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "copulae>=0.7.0",
]
publication = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
]
all = [
    "asri[dev,scraping,statistics,publication]",
]

[project.urls]
Homepage = "https://resurrexi.io"
Repository = "https://github.com/studiofarzulla/asri"
Documentation = "https://resurrexi.dev/asri"

[project.scripts]
asri = "asri.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asri"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["asri"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/asri --cov-report=term-missing"
